[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/UI/green_checkmark.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/red_cross.png" type="Texture" id=2]
[ext_resource path="res://Font/SukuriburuBySoultyRagevin-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/SongCard.gd" type="Script" id=4]
[ext_resource path="res://Font/EraserRegular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
use_mipmaps = true
font_data = ExtResource( 3 )

[node name="SongCard" type="VBoxContainer"]
margin_right = 296.0
margin_bottom = 52.0
size_flags_horizontal = 9
size_flags_vertical = 9
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongName" type="Label" parent="."]
margin_right = 296.0
margin_bottom = 17.0
size_flags_horizontal = 9
custom_fonts/font = SubResource( 3 )
text = "Blha blah blah - by the strokes"
clip_text = true
percent_visible = 1.28

[node name="SongStats" type="HBoxContainer" parent="."]
margin_top = 21.0
margin_right = 296.0
margin_bottom = 41.0
size_flags_horizontal = 9

[node name="Complete" type="TextureRect" parent="SongStats"]
margin_right = 21.0
margin_bottom = 20.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Failed" type="TextureRect" parent="SongStats"]
visible = false
margin_left = 25.0
margin_right = 43.0
margin_bottom = 20.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="SongStats"]
margin_left = 25.0
margin_right = 29.0
margin_bottom = 20.0

[node name="Score" type="Label" parent="SongStats"]
margin_left = 33.0
margin_top = 2.0
margin_right = 177.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 4 )
text = "Highscore: 123456789"

[node name="VSeparator" type="VSeparator" parent="SongStats"]
margin_left = 181.0
margin_right = 185.0
margin_bottom = 20.0

[node name="TimesPlayed" type="Label" parent="SongStats"]
margin_left = 189.0
margin_top = 2.0
margin_right = 263.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Played: 999"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 45.0
margin_right = 296.0
margin_bottom = 49.0
